--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpaceX Platzi</title>
+    <title>SpaceX</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" >
 </head>
 <body>
-    <header>
-        <h1 class="header">Platzinauta</h1>
-        <img class="header" src="img/platzi-logo.png" height="100px">
+    <header style="text-align: center">
+
         <img class="header" src="img/spacex-logo.png">
         <div class="description">
-            <p>Like <a href="https://spacex.com" target="_blank">SpaceX</a> and <a href="https://platzi.com/" target="_blank">Platzi</a>? look launches info, for Platzinautas like you!</p>
+            <p>Like <a href="https://spacex.com" target="_blank">SpaceX</a> 
         </div>
     </header>
     <section>
@@ -71,7 +70,7 @@
         </div>
     </section>
     <footer>
-        <p>Developed by <a href="https://sb.js.org/">Santiago Bernal</a> - <a href="https://github.com/santiaguf/spacex-platzi" target="_blank">Code</a></p>
+     
     </footer>
     <script type="text/javascript" src="js/launches.js"></script>
 </body>
